Setting posix permissions is not supported on windows. Use a boot jar to setup the classpath.